Upto Lecture 33-3 done

--- a/countries.html
+++ b/countries.html
@@ -5,23 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Recap</title>
+    <title>Countries</title>
 </head>
 
 <body>
     <header>
-        <h1>Fresh Quotes from Kanye Uncle</h1>
+        <h1>Explore Countries</h1>
     </header>
     <main>
         <section>
-            <blockquote id="quote">
+            <div id="countries-container">
 
-            </blockquote>
-            <button onclick="loadQuote()">Get a new Quote</button>
+            </div>
         </section>
     </main>
 
-    <script src="JS/kanye.js"></script>
+    <script src="JS/countries.js"></script>
 </body>
 
 </html>
